# retrieval_rs

./: .gitignore  Cargo.toml  README.md  README_zh.md  run.sh
src/: lib.rs  main.rs
src/model/: clip.rs
src/processor/: utils.rs
